--- a/go/Makefile
+++ b/go/Makefile
@@ -1,8 +1,11 @@
 all:	clean compile dockerize
 
-compile:
+prepare:
+	docker build -t golang:1.12-stretch-fixed -f Dockerfile.build .
+
+compile:	prepare
 	mkdir -p build/
-	go build -o build/hello hello.go
+	docker run -ti -v ${PWD}:/work -w /work -u $(shell id -u):$(shell id -g) golang:1.12-stretch-fixed go build -o build/hello hello.go
 
 clean:
 	rm -rf build/
