--- a/ocaml/Dockerfile.build
+++ b/ocaml/Dockerfile.build
@@ -1,6 +1,6 @@
-FROM ocaml/ocaml:debian-9
+FROM debian:stretch
 
 RUN export DEBIAN_FRONTEND=noninteractive; apt-get update \
-	&& apt-get install --no-install-recommends -y libc-dev \
+	&& apt-get install --no-install-recommends -y ocaml-nox libc-dev \
 	&& apt-get autoremove -y \
 	&& rm -rf /var/lib/apt/lists/*
