--- a/lisp/Dockerfile.build
+++ b/lisp/Dockerfile.build
@@ -1,6 +1,6 @@
 FROM debian:stretch
 
 RUN export DEBIAN_FRONTEND=noninteractive; apt-get update \
-	&& apt-get install --no-install-recommends -y sbcl \
+	&& apt-get install --no-install-recommends -y sbcl buildapp \
 	&& apt-get autoremove -y \
 	&& rm -rf /var/lib/apt/lists/*
