Removed redundant Dockerfile.build lines from java-graalvm variant.

--- a/java-graalvm/Makefile
+++ b/java-graalvm/Makefile
@@ -2,7 +2,7 @@ all:	clean compile dockerize run
 
 compile:
 	docker build -t distrolessdocker:java-graalvm-build-latest -f Dockerfile.build .
-	docker run --rm -u $(shell id -u):$(shell id -g) -v $(shell pwd -P):/work distrolessdocker:java-graalvm-build-latest
+	docker run --rm -u $(shell id -u):$(shell id -g) -v $(shell pwd -P):/work -w /work distrolessdocker:java-graalvm-build-latest /work/build.sh
 
 clean:
 	rm -rf build/
